fix menu spacing stuff

--- a/css/main.css
+++ b/css/main.css
@@ -1278,7 +1278,7 @@ a {
 	._flyoutWrapper_1bx67_1 {
         --translateX-value: 0;
 		grid-template-columns: var(--desktop-main-template-columns);
-		grid-template-rows: 1fr var(--dropdown-footer--height);
+		grid-template-rows: 1fr;
 		display: grid;
 		grid-column: full-width;
 		width: auto;
@@ -1323,7 +1323,7 @@ a {
 		display: grid;
 		grid-template-columns: var(--desktop-main-template-columns);
 		margin-bottom: var(--desktop-drawer__body-grid-margin-bottom);
-		overflow-y: auto;
+		overflow-y: visible;
 		overflow-x: hidden
 	}
 
@@ -1408,13 +1408,13 @@ a {
 
 	._flyoutWrapper_1bx67_1 ._tabSection__name_1bx67_114 {
 		position: relative;
-		font-size: 12px;
-		color: var(--header-color-black-4);
+		font-size: 10px;
+		color: var(--color-gray-70);
 		font-weight: 500;
 		letter-spacing: 1px;
 		text-transform: uppercase;
-		padding-bottom: 18px;
-		margin-bottom: 32px
+		padding-bottom: 0.5rem;
+		margin-bottom: 1.25rem;
 	}
 
 	._flyoutWrapper_1bx67_1 ._tabSection__name_1bx67_114:before {
